--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,50 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>GhFeedReader</title>
-  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>GhFeedReader</title>
+    <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
+    <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+    <%= csrf_meta_tags %>
+    <style content="text/css"><!--
+      body {
+        padding-top: 58px;
+      }
+    --></style>
+  </head>
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </a>
+          <a class="brand" href="/">GhFeedReader</a>
+        </div>
+      </div>
+    </div>
 
-<%= yield %>
-
-</body>
+    <div class="container">
+      <div class="row">
+        <div class="span3">
+          <div class="well sidebar-nav">
+            <h4>Settings</h4>
+            <ul class="nav nav-list">
+              <li class="nav-header"><%= link_to 'RSS', rsses_path %></li>
+              <% Rss.find_each do |rss| %>
+              <li><%= link_to rss.title, rss_path(rss) %></li>
+            <% end %>
+            </ul>
+          </div><!--/.well -->
+        </div><!--/span-->
+        <div class="span9">
+          <%= yield %>
+        </div>
+      </div><!--/row-->
+      <footer>
+      <p>&copy; Company 2012</p>
+      </footer>
+    </div> <!-- /container -->
+  </body>
 </html>
