--- a/app/views/rsses/show.html.erb
+++ b/app/views/rsses/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Title:</strong>
-  <%= @rss.title %>
+  <strong>Uid:</strong>
+  <%= @rss.uid %>
 </p>
 
 <p>
