--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,15 @@
       <div class="row">
         <div class="span3">
           <div class="well sidebar-nav">
+            <h4>Activity</h4>
+            <ul class="nav nav-list">
+              <% Rss.find_each do |rss| %>
+                <li><%= link_to rss.uid, activity_path(uid: rss.uid) %></li>
+              <% end %>
+            </ul>
             <h4>Settings</h4>
             <ul class="nav nav-list">
-              <li class="nav-header"><%= link_to 'RSS', rsses_path %></li>
-              <% Rss.find_each do |rss| %>
-              <li><%= link_to rss.title, rss_path(rss) %></li>
-            <% end %>
+              <li><%= link_to 'RSS', rsses_path %></li>
             </ul>
           </div><!--/.well -->
         </div><!--/span-->
