--- a/app/views/rsses/_form.html.erb
+++ b/app/views/rsses/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.label :uid %><br>
+    <%= f.text_field :uid %>
   </div>
   <div class="field">
     <%= f.label :url %><br>
